--- a/Sources/Coeli.Input/Coeli.Input.csproj
+++ b/Sources/Coeli.Input/Coeli.Input.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Coeli.Configuration\Coeli.Configuration.csproj" />
+      <ProjectReference Include="..\Coeli.Graphics\Coeli.Graphics.csproj" />
     </ItemGroup>
 
 </Project>
