--- a/Sources/Coeli.Resources/Coeli.Resources.csproj
+++ b/Sources/Coeli.Resources/Coeli.Resources.csproj
@@ -12,4 +12,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Coeli.LanguageExtensions\Coeli.LanguageExtensions.csproj" />
+    </ItemGroup>
+
 </Project>
