shader overlays part 2

--- a/Sources/Coeli.Graphics/Coeli.Graphics.csproj
+++ b/Sources/Coeli.Graphics/Coeli.Graphics.csproj
@@ -5,6 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>preview</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <NoWarn>CA2252</NoWarn> <!-- because EnablePreviewFeatures is not working -->
   </PropertyGroup>
 
   <ItemGroup>
