--- a/Sources/Coeli.Graphics/Coeli.Graphics.csproj
+++ b/Sources/Coeli.Graphics/Coeli.Graphics.csproj
@@ -86,6 +86,27 @@
     <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\Overlays\Texture\header.frag">
       <Link>Resources\Shaders\Overlays\Texture\header.frag</Link>
     </EmbeddedResource>
+    <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\Overlays\Instancing\call.frag">
+      <Link>Resources\Shaders\Overlays\Instancing\call.frag</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\Overlays\Instancing\header.frag">
+      <Link>Resources\Shaders\Overlays\Instancing\header.frag</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\Overlays\Instancing\call.vert">
+      <Link>Resources\Shaders\Overlays\Instancing\call.vert</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\Overlays\Instancing\header.vert">
+      <Link>Resources\Shaders\Overlays\Instancing\header.vert</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\scene.vert.out">
+      <Link>Resources\Shaders\scene.inout</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\Interfaces\scene.vert.out">
+      <Link>Resources\Shaders\Interfaces\scene.vert.out</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Update="..\..\Resources\Coeli\Resources\Shaders\Uniforms\camera_matrices.glsl">
+      <Link>Resources\Shaders\Uniforms\camera_matrices.glsl</Link>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
