--- a/Tests/Playground/Playground.csproj
+++ b/Tests/Playground/Playground.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\..\Sources\Coelum.Core\Coelum.Core.csproj" />
     <ProjectReference Include="..\..\Sources\Coelum.Graphics\Coelum.Graphics.csproj" />
     <ProjectReference Include="..\..\Sources\Coelum.UI\Coelum.UI.csproj" />
+    <ProjectReference Include="..\..\Sources\Coelum.World\Coelum.World.csproj" />
   </ItemGroup>
   
   <ItemGroup>
