--- a/Tests/Playground/Playground.csproj
+++ b/Tests/Playground/Playground.csproj
@@ -25,4 +25,10 @@
     <PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.21.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Include="..\..\External\FastNoiseLite\CSharp\FastNoiseLite.cs">
+      <Link>FastNoiseLite.cs</Link>
+    </Compile>
+  </ItemGroup>
 </Project>
