--- a/Tests/Playground/Playground.csproj
+++ b/Tests/Playground/Playground.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Sources\Coelum.Core\Coelum.Core.csproj" />
     <ProjectReference Include="..\..\Sources\Coelum.Graphics\Coelum.Graphics.csproj" />
+    <ProjectReference Include="..\..\Sources\Coelum.ModelLoading\Coelum.ModelLoading.csproj" />
     <ProjectReference Include="..\..\Sources\Coelum.UI\Coelum.UI.csproj" />
   </ItemGroup>
   
