place common stuff under Coelum.Common

--- a/Sources/Coelum.Core/Coelum.Core.csproj
+++ b/Sources/Coelum.Core/Coelum.Core.csproj
@@ -9,7 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Coelum.Configuration\Coelum.Configuration.csproj" />
     <ProjectReference Include="..\Coelum.Debug\Coelum.Debug.csproj" />
-    <ProjectReference Include="..\Coelum.Graphics.Common\Coelum.Graphics.Common.csproj" />
+    <ProjectReference Include="..\Coelum.Common.Graphics\Coelum.Common.Graphics.csproj" />
     <ProjectReference Include="..\Coelum.Resources\Coelum.Resources.csproj" />
   </ItemGroup>
 
