--- a/Sources/Coelum.Phoenix/Coelum.Phoenix.csproj
+++ b/Sources/Coelum.Phoenix/Coelum.Phoenix.csproj
@@ -119,7 +119,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Coelum.Configuration\Coelum.Configuration.csproj" />
     <ProjectReference Include="..\Coelum.Debug\Coelum.Debug.csproj" />
-    <ProjectReference Include="..\Coelum.Graphics.Common\Coelum.Graphics.Common.csproj" />
+    <ProjectReference Include="..\Coelum.Common.Graphics\Coelum.Common.Graphics.csproj" />
     <ProjectReference Include="..\Coelum.LanguageExtensions\Coelum.LanguageExtensions.csproj" />
     <ProjectReference Include="..\Coelum.Node\Coelum.Node.csproj" />
     <ProjectReference Include="..\Coelum.Resources\Coelum.Resources.csproj" />
