move phoenix to own subdirectory

--- a/Sources/Phoenix/Coelum.Phoenix.ModelLoading/Coelum.Phoenix.ModelLoading.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix.ModelLoading/Coelum.Phoenix.ModelLoading.csproj
@@ -9,8 +9,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Coelum.Phoenix\Coelum.Phoenix.csproj" />
-      <ProjectReference Include="..\Coelum.LanguageExtensions\Coelum.LanguageExtensions.csproj" />
-      <ProjectReference Include="..\Coelum.Resources\Coelum.Resources.csproj" />
+      <ProjectReference Include="..\..\Coelum.LanguageExtensions\Coelum.LanguageExtensions.csproj" />
+      <ProjectReference Include="..\..\Coelum.Resources\Coelum.Resources.csproj" />
     </ItemGroup>
 
     <ItemGroup>
