--- a/Sources/Phoenix/Coelum.Phoenix.Input/Coelum.Phoenix.Input.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix.Input/Coelum.Phoenix.Input.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Coelum.Common.Input\Coelum.Common.Input.csproj" />
+      <ProjectReference Include="..\..\Coelum.Common.Input\Coelum.Common.Input.csproj" />
       <ProjectReference Include="..\Coelum.Phoenix\Coelum.Phoenix.csproj" />
     </ItemGroup>
 
