--- a/Tests/Playground/Playground.csproj
+++ b/Tests/Playground/Playground.csproj
@@ -11,10 +11,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Sources\Coelum.Core\Coelum.Core.csproj" />
     <ProjectReference Include="..\..\Sources\Coelum.Node\Coelum.Node.csproj" />
-    <ProjectReference Include="..\..\Sources\Coelum.Phoenix.Input\Coelum.Phoenix.Input.csproj" />
-    <ProjectReference Include="..\..\Sources\Coelum.Phoenix\Coelum.Phoenix.csproj" />
-    <ProjectReference Include="..\..\Sources\Coelum.Phoenix.ModelLoading\Coelum.Phoenix.ModelLoading.csproj" />
-    <ProjectReference Include="..\..\Sources\Coelum.Phoenix.UI\Coelum.Phoenix.UI.csproj" />
+    <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.Input\Coelum.Phoenix.Input.csproj" />
+    <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix\Coelum.Phoenix.csproj" />
+    <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.ModelLoading\Coelum.Phoenix.ModelLoading.csproj" />
+    <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.UI\Coelum.Phoenix.UI.csproj" />
   </ItemGroup>
   
   <ItemGroup>
