--- a/Tests/PhoenixPlayground/PhoenixPlayground.csproj
+++ b/Tests/PhoenixPlayground/PhoenixPlayground.csproj
@@ -11,7 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Sources\Coelum.Core\Coelum.Core.csproj" />
     <ProjectReference Include="..\..\Sources\Coelum.Node\Coelum.Node.csproj" />
-    <ProjectReference Include="..\..\Sources\Coelum.World\Coelum.World.csproj" />
+    <ProjectReference Include="..\..\Sources\Coelum.Common.Ecs\Coelum.Common.Ecs.csproj" />
+    <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.Ecs\Coelum.Phoenix.Ecs.csproj" />
     <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.Input\Coelum.Phoenix.Input.csproj" />
     <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix\Coelum.Phoenix.csproj" />
     <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.ModelLoading\Coelum.Phoenix.ModelLoading.csproj" />
