--- a/Tests/PhoenixPlayground/PhoenixPlayground.csproj
+++ b/Tests/PhoenixPlayground/PhoenixPlayground.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Sources\Coelum.Core\Coelum.Core.csproj" />
-    <ProjectReference Include="..\..\Sources\Coelum.Node\Coelum.Node.csproj" />
+    <ProjectReference Include="..\..\Sources\Coelum.ECS\Coelum.ECS.csproj" />
     <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.Input\Coelum.Phoenix.Input.csproj" />
     <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix\Coelum.Phoenix.csproj" />
     <ProjectReference Include="..\..\Sources\Phoenix\Coelum.Phoenix.ModelLoading\Coelum.Phoenix.ModelLoading.csproj" />
