--- a/Sources/Phoenix/Coelum.Phoenix/Coelum.Phoenix.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix/Coelum.Phoenix.csproj
@@ -166,6 +166,12 @@
     <EmbeddedResource Update="..\..\..\Resources\Coeli\Resources\Shaders\Overlays\Lighting\common.glsl">
       <Link>Resources\Shaders\Overlays\Lighting\common.glsl</Link>
     </EmbeddedResource>
+    <EmbeddedResource Update="..\..\..\Resources\Coeli\Resources\Shaders\Overlays\SceneEnvironment\call.frag">
+      <Link>Resources\Shaders\Overlays\SceneEnvironment\call.frag</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Update="..\..\..\Resources\Coeli\Resources\Shaders\Overlays\SceneEnvironment\call.vert">
+      <Link>Resources\Shaders\Overlays\SceneEnvironment\call.vert</Link>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
