--- a/Sources/Phoenix/Coelum.Phoenix.UI/Coelum.Phoenix.UI.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix.UI/Coelum.Phoenix.UI.csproj
@@ -13,7 +13,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Silk.NET.OpenGL.Extensions.ImGui" Version="2.21.0" />
+      <PackageReference Include="Hexa.NET.ImGui" Version="2.1.10" />
+      <PackageReference Include="Hexa.NET.ImGui.Backends" Version="1.0.7" />
+      <PackageReference Include="Hexa.NET.ImGui.Backends.GLFW" Version="1.0.7" />
     </ItemGroup>
 
 </Project>
