--- a/Sources/Phoenix/Coelum.Phoenix.Editor/Coelum.Phoenix.Editor.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix.Editor/Coelum.Phoenix.Editor.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="Hexa.NET.ImGui.Backends.GLFW" Version="1.0.7" />
       <PackageReference Include="Hexa.NET.ImGuizmo" Version="2.1.10" />
       <PackageReference Include="Hexa.NET.ImPlot" Version="2.1.10" />
+      <PackageReference Include="Silk.NET.SDL" Version="2.22.0" />
     </ItemGroup>
 
 </Project>
