--- a/Sources/Phoenix/Coelum.Phoenix.Input/Coelum.Phoenix.Input.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix.Input/Coelum.Phoenix.Input.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Coelum.Phoenix\Coelum.Phoenix.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Silk.NET.Input.Glfw" Version="2.22.0" />
+    </ItemGroup>
+
 </Project>
