--- a/Sources/Phoenix/Coelum.Phoenix/Coelum.Phoenix.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix/Coelum.Phoenix.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Silk.NET.Assimp" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Input.Common" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.Input.Glfw" Version="2.22.0" />
     <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.22.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
