physics in editor!

--- a/Sources/Phoenix/Coelum.Phoenix.Editor/Coelum.Phoenix.Editor.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix.Editor/Coelum.Phoenix.Editor.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Coelum.Core\Coelum.Core.csproj" />
+      <ProjectReference Include="..\Coelum.Phoenix.Physics\Coelum.Phoenix.Physics.csproj" />
       <ProjectReference Include="..\Coelum.Phoenix\Coelum.Phoenix.csproj" />
     </ItemGroup>
 
