--- a/Sources/Phoenix/Coelum.Phoenix/Coelum.Phoenix.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix/Coelum.Phoenix.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hexa.NET.ImGuizmo" Version="2.2.0" />
     <PackageReference Include="Silk.NET.Assimp" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Input.Common" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Input.Glfw" Version="2.22.0" />
