--- a/Sources/Phoenix/Coelum.Phoenix.Editor/Coelum.Phoenix.Editor.csproj
+++ b/Sources/Phoenix/Coelum.Phoenix.Editor/Coelum.Phoenix.Editor.csproj
@@ -19,4 +19,8 @@
       <PackageReference Include="Silk.NET.SDL" Version="2.22.0" />
     </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="..\..\..\Resources\Coelum.Phoenix.Editor\**\*"/>
+  </ItemGroup>
+
 </Project>
